log
Wed 24 Apr 2024 01:39:17 AM UTC: 
 tests:  0|6
total_score: 0/70
1d3c93b
Wed 24 Apr 2024 05:47:19 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:69: error: comparison between pointer and integer [-Werror]
   45 |   if (map->buckets[position] == NULL || map->buckets[position]->key == -1)
      |                                                                     ^~
cc1: all warnings being treated as errors
Compilation failed
5e97ee7
Wed 24 Apr 2024 05:48:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9aed451
Wed 24 Apr 2024 05:54:03 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
hashmap.c:65:12: error: ‘Pair’ has no member named ‘next’
   65 |     current->next = newElem;
      |            ^~
Compilation failed
2a13681
Wed 24 Apr 2024 05:59:59 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
Compilation failed
a221e5b
Wed 24 Apr 2024 06:01:51 PM UTC: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  1|6
total_score: 10/70
8fe5ac6
Wed 24 Apr 2024 06:05:03 PM UTC: 
 hashmap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:26: error: ‘Pair’ has no member named ‘next’
   62 |         current = current->next;
      |                          ^~
hashmap.c:65:12: error: ‘Pair’ has no member named ‘next’
   65 |     current->next = newElem;
      |            ^~
Compilation failed
d61abfb
Wed 24 Apr 2024 06:11:07 PM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  4|5
total_score: 20/70
7c8d0a3
Wed 24 Apr 2024 06:13:44 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
09ea9a7
Wed 24 Apr 2024 06:16:44 PM UTC: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
c7098f5
Wed 24 Apr 2024 06:19:33 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
659f194
Wed 24 Apr 2024 06:19:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0b25f57
Wed 24 Apr 2024 06:24:13 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
db9ddd4
Wed 24 Apr 2024 06:25:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
ff8cbbc
Wed 24 Apr 2024 06:30:34 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
19174a3
Wed 24 Apr 2024 06:31:42 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3f674d9
Wed 24 Apr 2024 06:32:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
978dd5b
Fri 26 Apr 2024 07:45:16 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
7d5e4ac
Fri 26 Apr 2024 07:48:19 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
6b06540
Fri 26 Apr 2024 07:49:52 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
57a8410
Fri 26 Apr 2024 07:50:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
c5b5602
Fri 26 Apr 2024 07:54:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
39f61c8
Fri 26 Apr 2024 07:55:09 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
644f634
Fri 26 Apr 2024 07:56:10 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
127f542
Fri 26 Apr 2024 07:57:14 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|2
total_score: 50/70
32c6f52
Fri 26 Apr 2024 07:59:11 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
a5a0457
